fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
 html {
   overflow-x: hidden;
   scroll-behavior: smooth;
-  
+}
+
+body{
+  overflow: hidden;
 }
 
 a {
